gccida/g2/gen_add2_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_add2_insn/src/optabs.c:4279:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v2 = &insn_data_0[optab_table[0]->handlers[*( ( unsigned __int8 *)x + 2)].insn_code]; 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_add2_insn/src/optabs.c:4281:32: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( x, ( machine_mode)*( ( unsigned __int16 *)operand + 8)) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_add2_insn/src/optabs.c:4282:32: error: use of undeclared identifier 'machine_mode'
|| !operand[1].predicate( x, ( machine_mode)*( ( unsigned __int16 *)&operand[1] + 8)) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_add2_insn/src/optabs.c:4283:32: error: use of undeclared identifier 'machine_mode'
|| !operand[2].predicate( y, ( machine_mode)*( ( unsigned __int16 *)&operand[2] + 8)) ) 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_add2_insn/src/obj/optabs.o] Error 1
